partii/manifest/iot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-app1-deployment
  labels:
    app: iot-app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-app1
  template: #This is field of pod
    metadata:
      labels:
        app: iot-app1
    spec:
      volumes:
        - name: shared-data
          emptyDir: {}
        - name: config-volume
          configMap:
            name: iot-configmap
      containers:
        - name: nginx
          image: "nginx:stable-alpine3.24-perl"
          ports:
            - containerPort: 80
          volumeMounts:
            - name: shared-data
              mountPath: /usr/share/nginx/html
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-app2-deployment
  labels:
    app: iot-app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: iot-app2
  template: #This is field of pod
    metadata:
      labels:
        app: iot-app2
    spec:
      volumes:
        - name: shared-data
          emptyDir: {}
        - name: config-volume
          configMap:
            name: iot-configmap
      containers:
        - name: nginx
          image: "nginx:stable-alpine3.24-perl"
          ports:
            - containerPort: 80
          volumeMounts:
            - name: shared-data
              mountPath: /usr/share/nginx/html
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-app3-deployment
  labels:
    app: iot-app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-app3
  template: #This is field of pod
    metadata:
      labels:
        app: iot-app3
    spec:
      volumes:
        - name: shared-data
          emptyDir: {}
        - name: config-volume
          configMap:
            name: iot-configmap
      containers:
        - name: nginx
          image: "nginx:stable-alpine3.24-perl"
          ports:
            - containerPort: 80
          volumeMounts:
            - name: shared-data
              mountPath: /usr/share/nginx/html
