partii/manifest/iot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iot-apps-ingress
spec:
  rules:
    - host: app1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-app1
                port:
                  number: 80
    - host: app2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-app2
                port:
                  number: 80
    - host: app3.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-app3
                port:
                  number: 80
    # default with no Host in Header
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-app3
                port:
                  number: 80

# ingress or ing
# k get ingress
